--- a/aura/trac_IssueAppeasement/trac_IssueAppeasement.cmp
+++ b/aura/trac_IssueAppeasement/trac_IssueAppeasement.cmp
@@ -7,37 +7,52 @@
 <aura:component description="trac_IssueAppeasement"
                 extends="c:trac_BaseComponent"
                 implements="force:hasRecordId,flexipage:availableForAllPageTypes"
+                controller="trac_IssueAppeasementController"
                 access="global">
 
     <aura:attribute name="contactId" type="Id" description="The customer contact ID" />
-    <aura:attribute name="selectedAmount" type="Integer" description="The amount of points to award" default="1000" />
-    <aura:attribute name="selectedLabel" type="String" default="1,000" />
-    <aura:attribute name="displayAmount" type="String" default="$10.00 CAD" />
-    <aura:attribute name="currentBalance" type="Integer" default="0" />
+<!--    <aura:attribute name="lib" type="Object" description="overlayLib passed in from parent" />-->
+    <aura:attribute name="selectedAmount" type="Integer" description="The amount of points to award" />
+    <aura:attribute name="selectedLabel" type="String" />
+    <aura:attribute name="displayAmount" type="String" />
+    <aura:attribute name="pointsAvailable" type="Integer" default="0" />
     <aura:attribute name="finalDisplayBalance" type="String" />
 
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
+    <aura:handler name="change" value="{!v.selectedAmount}" action="{!c.selectAmount}"/>
+
+    <aura:registerEvent name="closeModalEvent" type="c:trac_CloseModalApplicationEvent"/>
 
     <p class="slds-text-heading--medium slds-m-bottom--large">Points to Award</p>
 
-    <div class="slds-align--absolute-center">
-        <lightning:buttonGroup>
-            <lightning:button variant="{!equals(v.selectedAmount,1000)?'brand':'neutral'}" label="1,000" onclick="{!c.selectAmount}" />
-            <lightning:button variant="{!equals(v.selectedAmount,2000)?'brand':'neutral'}" label="2,000" onclick="{!c.selectAmount}" />
-            <lightning:button variant="{!equals(v.selectedAmount,3000)?'brand':'neutral'}" label="3,000" onclick="{!c.selectAmount}" />
-            <lightning:button variant="{!equals(v.selectedAmount,4000)?'brand':'neutral'}" label="4,000" onclick="{!c.selectAmount}" />
-            <lightning:button variant="{!equals(v.selectedAmount,5000)?'brand':'neutral'}" label="5,000" onclick="{!c.selectAmount}" />
-        </lightning:buttonGroup>
+    <lightning:messages/>
+
+    <div>
+<!--        <lightning:buttonGroup>-->
+<!--            <lightning:button variant="{!equals(v.selectedAmount,1000)?'brand':'neutral'}" label="1,000" onclick="{!c.selectAmount}" />-->
+<!--            <lightning:button variant="{!equals(v.selectedAmount,2000)?'brand':'neutral'}" label="2,000" onclick="{!c.selectAmount}" />-->
+<!--            <lightning:button variant="{!equals(v.selectedAmount,3000)?'brand':'neutral'}" label="3,000" onclick="{!c.selectAmount}" />-->
+<!--            <lightning:button variant="{!equals(v.selectedAmount,4000)?'brand':'neutral'}" label="4,000" onclick="{!c.selectAmount}" />-->
+<!--            <lightning:button variant="{!equals(v.selectedAmount,5000)?'brand':'neutral'}" label="5,000" onclick="{!c.selectAmount}" />-->
+<!--        </lightning:buttonGroup>-->
+        <form class="slds-form--stacked">
+            <lightning:input aura:id="amount" label="Points Amount"
+                             name="amount"
+                             value="{!v.selectedAmount}"
+                             type="text"
+                             pattern="[0-9]+"
+                             required="true"/>
+        </form>
     </div>
 
-    <p class="slds-m-top--large">
+    <p class="{!(and(v.selectedAmount != null, v.selectedAmount > 0) ? 'slds-show' : 'slds-hide') + ' slds-m-top--large'}">
         The customer will be awarded {!v.selectedLabel} points, worth {!v.displayAmount}
         at time of redemption.  Their new point balance will be {!v.finalDisplayBalance}
         points. An email confirmation will be sent regarding this.
     </p>
 
     <div class="slds-m-top--large slds-align--absolute-center">
-        <lightning:button label="Submit Appeasement" onclick="{!c.submitAppeasement}" />
+        <lightning:button label="Submit Appeasement" onclick="{!c.submitAppeasementForm}" />
     </div>
 
 </aura:component>
