--- a/aura/trac_Loyalty/trac_Loyalty.cmp
+++ b/aura/trac_Loyalty/trac_Loyalty.cmp
@@ -1,6 +1,11 @@
 <aura:component description="trac_Loyalty" extends="c:trac_BaseComponent">
     <aura:attribute name="loyalty" type="Object" />
     <aura:attribute name="isEditable" type="Boolean" default="false" />
+    <aura:attribute name="appeasementModalPromise" type="Aura.Action"/>
+
+    <aura:handler event="c:trac_CloseModalApplicationEvent" action="{!c.handleCloseModalApplicationEvent}"/>
+
+    <lightning:overlayLibrary aura:id="overlayLib"/>
 
     <lightning:layout multipleRows="true">
         <lightning:layoutItem padding="around-small" size="6">
@@ -223,5 +228,11 @@
             </lightning:layout>
         </lightning:accordionSection>
     </lightning:accordion>
+
+    <lightning:layout multipleRows="true">
+        <lightning:layoutItem padding="around-small" size="6">
+            <lightning:button name="issueAppeasement" label="Issue Appeasement" onclick="{!c.handleShowAppeasementModal}"/>
+        </lightning:layoutItem>
+    </lightning:layout>
 
 </aura:component>
