--- a/aura/trac_Loyalty/trac_Loyalty.cmp
+++ b/aura/trac_Loyalty/trac_Loyalty.cmp
@@ -2,11 +2,8 @@
     <aura:attribute name="loyalty" type="Object" />
     <aura:attribute name="isEditable" type="Boolean" default="false" />
     <aura:attribute name="appeasementModalPromise" type="Aura.Action"/>
-
     <aura:handler event="c:trac_CloseModalApplicationEvent" action="{!c.handleCloseModalApplicationEvent}"/>
-
     <lightning:overlayLibrary aura:id="overlayLib"/>
-
     <lightning:layout multipleRows="true">
         <lightning:layoutItem padding="around-small" size="6">
             <div class="header-column">
@@ -14,7 +11,6 @@
                 <p>{!v.loyalty.external_customer_id}</p>
             </div>
         </lightning:layoutItem>
-
         <lightning:layoutItem padding="around-small" size="6">
             <div class="header-column">
                 <p class="field-title slds-form-element__label slds-no-flex">Primary Account Contact</p>
@@ -28,7 +24,6 @@
                 </p>
             </div>
         </lightning:layoutItem>
-
         <lightning:layoutItem padding="around-small" size="6">
             <div class="header-column">
                 <p class="field-title slds-form-element__label slds-no-flex">Account Tier</p>
@@ -40,22 +35,20 @@
                 </aura:if>
             </div>
         </lightning:layoutItem>
-
         <lightning:layoutItem padding="around-small" size="6">
             <div class="header-column">
                 <p class="field-title slds-form-element__label slds-no-flex">Account Phone</p>
                 <p><lightning:formattedPhone value="{!v.loyalty.home_phone}"/></p>
             </div>
         </lightning:layoutItem>
-
         <lightning:layoutItem padding="around-small" size="6">
             <div class="header-column">
                 <p class="field-title slds-form-element__label slds-no-flex">Account Status</p>
                 <aura:if isTrue="{!not(empty(v.loyalty.status))}">
                     <aura:if isTrue="{!v.loyalty.status == 'paused'}">
-                        <p>closed</p>
+                        <p>Closed</p>
                         <aura:set attribute="else">
-                            <p>{!v.loyalty.status}</p>
+                            <p class="capitalize">{!v.loyalty.status}</p>
                         </aura:set>
                     </aura:if>
                     <aura:set attribute="else">
@@ -64,7 +57,6 @@
                 </aura:if>
             </div>
         </lightning:layoutItem>
-
         <lightning:layoutItem padding="around-small" size="6">
             <div class="header-column">
                 <p class="field-title slds-form-element__label slds-no-flex">Last Point Activity</p>
@@ -76,7 +68,6 @@
                 </aura:if>
             </div>
         </lightning:layoutItem>
-
         <lightning:layoutItem padding="around-small" size="6">
             <div class="header-column">
                 <p class="field-title slds-form-element__label slds-no-flex">Points Available for Redemption</p>
@@ -90,14 +81,12 @@
                 </aura:if>
             </div>
         </lightning:layoutItem>
-
         <lightning:layoutItem padding="around-small" size="6">
             <div class="header-column">
                 <p class="field-title slds-form-element__label slds-no-flex">Credit</p>
                 <p>Cobranded MasterCard</p>
             </div>
         </lightning:layoutItem>
-
         <lightning:layoutItem padding="around-small" size="6">
             <div class="header-column">
                 <p class="field-title slds-form-element__label slds-no-flex">Badges</p>
@@ -110,7 +99,6 @@
                 </div>
             </div>
         </lightning:layoutItem>
-        
         <aura:if isTrue="{!v.isEditable}">
             <lightning:layout>
                 <c:trac_CloseLoyaltyAccount loyalty="{!v.loyalty}"/>
@@ -119,9 +107,7 @@
                 </lightning:layoutItem>
             </lightning:layout>
         </aura:if>
-
     </lightning:layout>
-
     <lightning:accordion aura:id="accordion" activeSectionName="points">
         <lightning:accordionSection name="points" label="Recent Points Transaction">
             <aura:set attribute="body">
@@ -150,19 +136,17 @@
                         </aura:if>
                     </div>
                 </lightning:layoutItem>
-
                 <lightning:layoutItem padding="around-small" size="6">
                     <div class="header-column">
                         <p class="field-title slds-form-element__label slds-no-flex">Current Tier</p>
-                        <aura:if isTrue="{!not(empty(v.loyalty.tier_name))}">
-                            <p>{!v.loyalty.tier_name}</p>
+                        <aura:if isTrue="{!not(empty(v.loyalty.top_tier_name))}">
+                            <p>{!v.loyalty.top_tier_name}</p>
                             <aura:set attribute="else">
                                 <p>N/A</p>
                             </aura:set>
                         </aura:if>
                     </div>
                 </lightning:layoutItem>
-
                 <lightning:layoutItem padding="around-small" size="6">
                     <div class="header-column">
                         <p class="field-title slds-form-element__label slds-no-flex">Next Tier</p>
@@ -175,7 +159,6 @@
                         </aura:if>
                     </div>
                 </lightning:layoutItem>
-
                 <lightning:layoutItem padding="around-small" size="6">
                     <div class="header-column">
                         <p class="field-title slds-form-element__label slds-no-flex">Current Tier Expires</p>
@@ -187,19 +170,6 @@
                         </aura:if>
                     </div>
                 </lightning:layoutItem>
-
-                <lightning:layoutItem padding="around-small" size="6">
-                    <div class="header-column">
-                        <p class="field-title slds-form-element__label slds-no-flex">Lifetime Points Earned</p>
-                        <aura:if isTrue="{!not(empty(v.loyalty.lifetime_balance))}">
-                            <p>{!v.loyalty.lifetime_balance}</p>
-                            <aura:set attribute="else">
-                                <p>N/A</p>
-                            </aura:set>
-                        </aura:if>
-                    </div>
-                </lightning:layoutItem>
-
                 <lightning:layoutItem padding="around-small" size="6">
                     <div class="header-column">
                         <p class="field-title slds-form-element__label slds-no-flex">Spend To Qualify</p>
@@ -212,7 +182,17 @@
                         </aura:if>
                     </div>
                 </lightning:layoutItem>
-
+                <lightning:layoutItem padding="around-small" size="6">
+                    <div class="header-column">
+                        <p class="field-title slds-form-element__label slds-no-flex">Lifetime Points Earned</p>
+                        <aura:if isTrue="{!not(empty(v.loyalty.lifetime_balance))}">
+                            <p>{!v.loyalty.lifetime_balance}</p>
+                            <aura:set attribute="else">
+                                <p>N/A</p>
+                            </aura:set>
+                        </aura:if>
+                    </div>
+                </lightning:layoutItem>
                 <lightning:layoutItem padding="around-small" size="6">
                     <div class="header-column">
                         <p class="field-title slds-form-element__label slds-no-flex">Last Year's Tier</p>
@@ -224,15 +204,12 @@
                         </aura:if>
                     </div>
                 </lightning:layoutItem>
-
             </lightning:layout>
         </lightning:accordionSection>
     </lightning:accordion>
-
     <lightning:layout multipleRows="true">
         <lightning:layoutItem padding="around-small" size="6">
             <lightning:button name="issueAppeasement" label="Issue Appeasement" onclick="{!c.handleShowAppeasementModal}"/>
         </lightning:layoutItem>
     </lightning:layout>
-
 </aura:component>
