--- a/aura/trac_DisplayTransaction/trac_DisplayTransaction.cmp
+++ b/aura/trac_DisplayTransaction/trac_DisplayTransaction.cmp
@@ -11,31 +11,27 @@
 
     <aura:iteration items="{!v.transactionValues}" var="transactionData" indexVar="count">
         <aura:if isTrue="{!lessthan(count,6)}">
-
         <tr class="slds-hint-parent">
             <td class="slds-cell-wrap">
                 <lightning:buttonIcon value="{!count}" onclick="{!c.fireEvent}" iconName="utility:search" />
             </td>
             <td>
                 <div class="slds-truncate">
-                    <lightning:formattedDateTime value="{!transactionData.created_at}" year="2-digit" month="long" day="2-digit" />
+                    <lightning:formattedDateTime value="{!transactionData.created_at}" year="numeric" month="short" day="2-digit" />
                 </div>
             </td>
             <td class="slds-hyphenate">
                 {!transactionData.event_id}<br/>
-                {!transactionData.display_detail}<br/>
-                <i style="text-transform:uppercase">{!transactionData.channel}</i>
+                {!transactionData.display_detail}&nbsp;<i>(from <span style="text-transform:uppercase">{!transactionData.channel}</span>)</i>
             </td>
             <td>
                 <div class="slds-clearfix">
                     <div class="slds-float_right">
-                        <b>{!transactionData.points}</b>
+                        <b><aura:if isTrue="{!not(lessthan(transactionData.points,0))}">+</aura:if>{!transactionData.points}</b>
                     </div>
                 </div>
             </td>
         </tr>
-
         </aura:if>
     </aura:iteration>
-
 </aura:component>
