--- a/aura/trac_LoyaltyTransactionHistory/trac_LoyaltyTransactionHistory.cmp
+++ b/aura/trac_LoyaltyTransactionHistory/trac_LoyaltyTransactionHistory.cmp
@@ -96,80 +96,86 @@
 
                         <aura:iteration items="{!v.transactions.data}" var="transactionData" indexVar="variableIndex">
                             <aura:if isTrue="{!lessthan(variableIndex,v.recordsToDisplay)}">
-                                <lightning:layout>
-                                    <lightning:layoutItem padding="around-small" size="1">
-                                        <lightning:buttonIcon value="{!variableIndex}" onclick="{!c.toggleData}" iconName="{!transactionData.showDetails?'utility:chevrondown':'utility:chevronright'}" />
-                                    </lightning:layoutItem>
-                                    <lightning:layoutItem padding="around-small" size="1">
-                                        <div class="custom-box">
-                                            <lightning:formattedDateTime value="{!transactionData.created_at}" year="numeric" month="short" day="2-digit" />
-                                        </div>
-                                    </lightning:layoutItem>
-                                    <lightning:layoutItem padding="around-small" size="1">
-                                        <div class="custom-box">
-                                            <lightning:formattedDateTime value="{!transactionData.originated_at}" year="numeric" month="short" day="2-digit"/>
-                                        </div>
-                                    </lightning:layoutItem>
-                                    <lightning:layoutItem padding="around-small" size="4">
-                                        <div class="custom-box">{!transactionData.event_id}
-                                            <br/>{!transactionData.display_detail} in 
-                                            <aura:if isTrue="{!transactionData.channel == 'pos'}">
-                                                Store {!transactionData.sub_channel}&nbsp;–&nbsp; <span style="text-transform:uppercase">{!transactionData.channel}</span>
-                                                <aura:set attribute="else"><span style="text-transform:capitalize">{!transactionData.channel}</span></aura:set>
-                                            </aura:if>
-                                            <br/><i>{!transactionData.detail}</i>
-                                        </div>
-                                    </lightning:layoutItem>
-                                    <lightning:layoutItem padding="around-small" size="1"> <b>
-                                        <div class="custom-box">
-                                            <aura:if isTrue="{!lessthan(transactionData.points,0)}">
-                                                {!transactionData.points}
-                                                <aura:set attribute="else">0</aura:set>
-                                            </aura:if>
-                                        </div></b>
-                                    </lightning:layoutItem>
-                                    <lightning:layoutItem padding="around-small" size="1">
-                                        <div class="custom-box"><b>
-                                            <aura:if isTrue="{!greaterthanorequal(transactionData.points,0)}">
-                                                <p>+{!transactionData.points}</p>
-                                                <aura:set attribute="else">
-                                                    <p>0</p>
-                                                </aura:set>
-                                            </aura:if></b><br/>
-                                        </div>
-                                    </lightning:layoutItem>
-                                    <lightning:layoutItem padding="around-small" size="1">
-                                        <div class="slds-clearfix">
-                                            <div class="slds-float_right">
-                                                <p><b>{!transactionData.points}</b></p>
-                                            </div>
-                                        </div>
-                                         <div class="custom-box">
-                                            <aura:if isTrue="{!transactionData.showDetails}">
-                                                <aura:iteration items="{!transactionData.rule.ledger}" var="ledger" ><i>
-                                                        <div class="slds-clearfix">
-                                                            <div class="slds-float_right">
-                                                                <aura:if isTrue="{!not(lessthan(ledger.points,0))}">+</aura:if>{!ledger.points}
-                                                            </div>
-                                                        </div></i>
-                                                </aura:iteration>
-                                            </aura:if>
-                                        </div>
-                                    </lightning:layoutItem>
-                                    <lightning:layoutItem padding="around-small" size="2">
-                                        <br/>
-                                        <div class="custom-box">
-                                            <aura:if isTrue="{!transactionData.showDetails}">
-                                                <aura:iteration items="{!transactionData.rule.ledger}" var="ledger" ><i>
-                                                        <div class="slds-clearfix">
-                                                            <div>{!ledger.title}</div>
-                                                        </div></i>
-                                                </aura:iteration>
-                                            </aura:if>
-                                        </div>
-                                    </lightning:layoutItem>
-                                </lightning:layout>
-                                <!--<hr/>-->
+                                <c:trac_LoyaltyTransactionHistoryRow transactionData="{!transactionData}" />
+<!--                                <lightning:layout>-->
+<!--                                    <lightning:layoutItem padding="around-small" size="1">-->
+<!--                                        <lightning:buttonIcon value="{!variableIndex}" onclick="{!c.toggleData}" iconName="{!transactionData.showDetails?'utility:chevrondown':'utility:chevronright'}" />-->
+<!--                                    </lightning:layoutItem>-->
+<!--                                    <lightning:layoutItem padding="around-small" size="1">-->
+<!--                                        <div class="custom-box">-->
+<!--                                            <lightning:formattedDateTime value="{!transactionData.created_at}" year="numeric" month="short" day="2-digit" />-->
+<!--                                        </div>-->
+<!--                                    </lightning:layoutItem>-->
+<!--                                    <lightning:layoutItem padding="around-small" size="1">-->
+<!--                                        <div class="custom-box">-->
+<!--                                            <lightning:formattedDateTime value="{!transactionData.originated_at}" year="numeric" month="short" day="2-digit"/>-->
+<!--                                        </div>-->
+<!--                                    </lightning:layoutItem>-->
+<!--                                    <lightning:layoutItem padding="around-small" size="4">-->
+<!--                                        <div class="custom-box">{!transactionData.event_id}-->
+<!--                                            <br/>{!transactionData.display_detail} in-->
+<!--                                            <aura:unescapedHtml value="{!transactionData.display_channel}" />-->
+<!--&lt;!&ndash;                                            <aura:if isTrue="{!transactionData.channel == 'pos'}">&ndash;&gt;-->
+<!--&lt;!&ndash;                                                Store {!transactionData.sub_channel}&nbsp;–&nbsp; <span style="text-transform:uppercase">{!transactionData.channel}</span>&ndash;&gt;-->
+<!--&lt;!&ndash;                                                <aura:set attribute="else"><span style="text-transform:capitalize">{!transactionData.channel}</span></aura:set>&ndash;&gt;-->
+<!--&lt;!&ndash;                                            </aura:if>&ndash;&gt;-->
+<!--                                            <br/><i>{!transactionData.detail}</i>-->
+<!--                                        </div>-->
+<!--                                    </lightning:layoutItem>-->
+<!--                                    <lightning:layoutItem padding="around-small" size="1">-->
+<!--                                        <div class="custom-box">-->
+<!--                                            <b>{!transactionData.display_points_redeemed}</b>-->
+<!--&lt;!&ndash;                                            <aura:if isTrue="{!lessthan(transactionData.points,0)}">&ndash;&gt;-->
+<!--&lt;!&ndash;                                                {!transactionData.points}&ndash;&gt;-->
+<!--&lt;!&ndash;                                                <aura:set attribute="else">0</aura:set>&ndash;&gt;-->
+<!--&lt;!&ndash;                                            </aura:if>&ndash;&gt;-->
+<!--                                        </div>-->
+<!--                                    </lightning:layoutItem>-->
+<!--                                    <lightning:layoutItem padding="around-small" size="1">-->
+<!--                                        <div class="custom-box">-->
+<!--                                            <b>{!transactionData.display_points_earned}</b>-->
+<!--&lt;!&ndash;                                            <aura:if isTrue="{!greaterthanorequal(transactionData.points,0)}">&ndash;&gt;-->
+<!--&lt;!&ndash;                                                <p>+{!transactionData.points}</p>&ndash;&gt;-->
+<!--&lt;!&ndash;                                                <aura:set attribute="else">&ndash;&gt;-->
+<!--&lt;!&ndash;                                                    <p>0</p>&ndash;&gt;-->
+<!--&lt;!&ndash;                                                </aura:set>&ndash;&gt;-->
+<!--&lt;!&ndash;                                            </aura:if></b><br/>&ndash;&gt;-->
+<!--                                        </div>-->
+<!--                                    </lightning:layoutItem>-->
+<!--                                    <lightning:layoutItem padding="around-small" size="1">-->
+<!--                                        <div class="slds-clearfix">-->
+<!--                                            <div class="slds-float_right">-->
+<!--                                                <p><b>{!transactionData.points}</b></p>-->
+<!--                                            </div>-->
+<!--                                        </div>-->
+<!--                                         <div class="custom-box">-->
+<!--                                            <aura:if isTrue="{!transactionData.showDetails}">-->
+<!--                                                <aura:unescapedHtml value="{!transactionData.display_ledger_points}" />-->
+<!--&lt;!&ndash;                                                <aura:iteration items="{!transactionData.rule.ledger}" var="ledger" ><i>&ndash;&gt;-->
+<!--&lt;!&ndash;                                                        <div class="slds-clearfix">&ndash;&gt;-->
+<!--&lt;!&ndash;                                                            <div class="slds-float_right">&ndash;&gt;-->
+<!--&lt;!&ndash;                                                                <aura:if isTrue="{!not(lessthan(ledger.points,0))}">+</aura:if>{!ledger.points}&ndash;&gt;-->
+<!--&lt;!&ndash;                                                            </div>&ndash;&gt;-->
+<!--&lt;!&ndash;                                                        </div></i>&ndash;&gt;-->
+<!--&lt;!&ndash;                                                </aura:iteration>&ndash;&gt;-->
+<!--                                            </aura:if>-->
+<!--                                        </div>-->
+<!--                                    </lightning:layoutItem>-->
+<!--                                    <lightning:layoutItem padding="around-small" size="2">-->
+<!--                                        <br/>-->
+<!--                                        <div class="custom-box">-->
+<!--                                            <aura:if isTrue="{!transactionData.showDetails}">-->
+<!--                                                <aura:unescapedHtml value="{!transactionData.display_ledger_details}" />-->
+<!--&lt;!&ndash;                                                <aura:iteration items="{!transactionData.rule.ledger}" var="ledger" ><i>&ndash;&gt;-->
+<!--&lt;!&ndash;                                                        <div class="slds-clearfix">&ndash;&gt;-->
+<!--&lt;!&ndash;                                                            <div>{!ledger.title}</div>&ndash;&gt;-->
+<!--&lt;!&ndash;                                                        </div></i>&ndash;&gt;-->
+<!--&lt;!&ndash;                                                </aura:iteration>&ndash;&gt;-->
+<!--                                            </aura:if>-->
+<!--                                        </div>-->
+<!--                                    </lightning:layoutItem>-->
+<!--                                </lightning:layout>-->
+<!--                                &lt;!&ndash;<hr/>&ndash;&gt;-->
                             </aura:if>
                         </aura:iteration>
                     </div>
