US-0000164: Order Details Update

--- a/aura/trac_Order/trac_Order.cmp
+++ b/aura/trac_Order/trac_Order.cmp
@@ -355,6 +355,12 @@
                 </lightning:tab>
             </aura:if>
 
+            <aura:if isTrue="{!not(empty(v.order.Extn))}">
+                <lightning:tab label="Loyalty" id="loyalty">
+                    <c:trac_OrderLoyalty order="{!v.order}" />
+                </lightning:tab>
+            </aura:if>
+
         </lightning:tabset>
 
     </div>
