--- a/aura/trac_CaseLoyalty/trac_CaseLoyalty.cmp
+++ b/aura/trac_CaseLoyalty/trac_CaseLoyalty.cmp
@@ -1,8 +1,17 @@
-<aura:component description="trac_CaseLoyalty" extends="c:trac_BaseComponent" implements="flexipage:availableForAllPageTypes,force:hasRecordId">
+<aura:component description="trac_CaseLoyalty" extends="c:trac_BaseComponent" implements="flexipage:availableForAllPageTypes,force:hasRecordId,flexipage:availableForRecordHome">
 
     <aura:attribute name="loyalty"         type="Map" />
     <aura:attribute name="editButtonText"  type="String"  default="Edit" />
     <aura:attribute name="isEditable"      type="Boolean" default="false" />
+    <aura:attribute name="caseRecord"      type="Object"/>
+    <aura:attribute name="recordLoadError" type="String"/>
+
+    <force:recordData aura:id="recordLoader"
+                      recordId="{!v.recordId}"
+                      fields="Id, Customer_Loyalty_Id__c"
+                      targetFields="{!v.caseRecord}"
+                      targetError="{!v.recordLoadError}"
+    />
 
     
     <div class="slds-box slds-theme_default">
@@ -25,10 +34,15 @@
 
         <div class="slds-is-relative">
             <aura:if isTrue="{!empty(v.loyalty)}">
-                <c:trac_LoyaltySearch loyalty="{!v.loyalty}" recordId="{!v.recordId}" />
+                <aura:if isTrue="{!empty(v.caseRecord.Customer_Loyalty_Id__c)}">
+                <c:trac_LoyaltySearch loyalty="{!v.loyalty}" recordId="{!v.recordId}"/>
+                    <aura:set attribute="else">
+                        <c:trac_LoyaltySearch loyalty="{!v.loyalty}" recordId="{!v.recordId}" customerLoyaltyId="{!v.caseRecord.Customer_Loyalty_Id__c}"/>
+                    </aura:set>
+                </aura:if>
             </aura:if>
         </div>
-        
+
         <div class="slds-is-relative">
             <aura:if isTrue="{!not(empty(v.loyalty))}">
                 <c:trac_Loyalty loyalty="{!v.loyalty}" isEditable="{!v.isEditable}"  caseRecordId="{!v.recordId}" />
