US-0000093: Open a Loyalty Servicing Case

--- a/aura/trac_LoyaltySearch/trac_LoyaltySearch.cmp
+++ b/aura/trac_LoyaltySearch/trac_LoyaltySearch.cmp
@@ -1,20 +1,20 @@
 <aura:component description="trac_LoyaltySearch" extends="c:trac_BaseComponent" controller="trac_LoyaltySearchController" >
-    <aura:attribute name="loyalty"          type="Object"/>
-    <aura:attribute name="noLoyaltyFound"   type="Boolean" default="false"/>
-    <aura:attribute name="showError"        type="boolean" default="false"/>
-    <aura:attribute name="errorMessage"     type="String" default="Please specify a valid input." />
+    <aura:attribute name="loyalty" type="Object"/>
+    <aura:attribute name="noLoyaltyFound" type="Boolean" default="false"/>
+    <aura:attribute name="showError" type="boolean" default="false"/>
+    <aura:attribute name="errorMessage" type="String" default="Please specify a valid input." />
 
-    <aura:attribute name="options"          type="List" access="PRIVATE"/>
-    <aura:attribute name="selectedValue"    type="String" />
-
-    <aura:attribute type="Integer" name="responseCode"    default=""/>
-    <aura:attribute type="String"  name="bodyMsg"         default=""/>
-    <aura:attribute type="Boolean" name="isMerkleError"   default="false"/>
-    <aura:attribute type="Boolean" name="canRetry"        default="false"/>
-    <aura:attribute type="String"  name="recordId" />
-    <aura:attribute type="String"  name="customerLoyaltyId" />
+    <aura:attribute name="options"         type="List" access="PRIVATE"/>
+    <aura:attribute name="selectedValue"   type="String" />
+    <aura:attribute name="refreshSearch"   type="Boolean" default="false" />
+    <aura:attribute type="Integer"  name="responseCode"  default=""/>
+    <aura:attribute type="String"   name="bodyMsg"  default=""/>
+    <aura:attribute type="Boolean"  name="linked_partnerships" default="false" />
+    <aura:attribute type="Boolean"  name="isMerkleError"   default="false"/>
+    <aura:attribute type="Boolean"  name="canRetry"   default="false"/>
+    <aura:attribute type="String"   name="recordId" />
+    <aura:attribute type="String"   name="customerLoyaltyId" />
     <aura:handler name="init" value="{!this}" action="{!c.init}" />
-
     <c:trac_MerkleErrorComponent canRetry="{!v.canRetry}" reattempt="{!c.loyaltySearch}" isMerkleError="{!v.isMerkleError}" bodyMsg="{!v.bodyMsg}" responseCode="{!v.responseCode}"/>
 
     <div onkeyup="{!c.formPress}" class="slds-border_bottom" >
@@ -23,7 +23,6 @@
                 {!v.errorMessage}
             </aura:if>
         </div>
-
         <lightning:layout horizontalAlign="space" multipleRows="true">
             <lightning:layoutItem class="slds-small-size_1-of-2" padding="around-small">
                 <lightning:select label="Find Account By" aura:id="loyaltySearchType" value="{!v.selectedValue}">
@@ -32,7 +31,6 @@
                     </aura:iteration>
                 </lightning:select>
             </lightning:layoutItem>
-
             <lightning:layoutItem class="slds-small-size_1-of-2" padding="around-small">
                 <aura:if isTrue="{!v.selectedValue=='1'}">
                     <lightning:input label="Email" type="email" aura:id="emailInput" placeholder="example@hbc.com" />
@@ -69,5 +67,4 @@
             </div>
         </aura:if>
     </div>
-
 </aura:component>
