--- a/aura/trac_CaseLoyalty/trac_CaseLoyalty.cmp
+++ b/aura/trac_CaseLoyalty/trac_CaseLoyalty.cmp
@@ -1,10 +1,11 @@
 <aura:component description="trac_CaseLoyalty" extends="c:trac_BaseComponent" implements="flexipage:availableForAllPageTypes,force:hasRecordId,flexipage:availableForRecordHome">
-
     <aura:attribute name="loyalty"         type="Map" />
     <aura:attribute name="editButtonText"  type="String"  default="Edit" />
     <aura:attribute name="isEditable"      type="Boolean" default="false" />
     <aura:attribute name="caseRecord"      type="Object"/>
     <aura:attribute name="recordLoadError" type="String"/>
+    <aura:attribute name="refreshSearch" type="Boolean" default="false" />
+    <aura:handler event="c:trac_LoyaltyRefreshEvent" action="{!c.handleLoyaltyRefreshEvent}"/>
 
     <force:recordData aura:id="recordLoader"
                       recordId="{!v.recordId}"
@@ -13,7 +14,8 @@
                       targetError="{!v.recordLoadError}"
     />
 
-    
+    <aura:handler name="change" value="{!v.isEditable}" action="{!c.handleValueChange}"/>
+
     <div class="slds-box slds-theme_default">
         <div style="overflow:auto" class="slds-align_absolute-center">
             <lightning:layoutItem padding="around-small" class="slds-float_left">
@@ -31,21 +33,19 @@
                 </lightning:layoutItem>
             </aura:if>
         </div>
-
         <div class="slds-is-relative">
-            <aura:if isTrue="{!empty(v.loyalty)}">
+            <aura:if isTrue="{!empty(v.loyalty) || v.refreshSearch==true}">
                 <aura:if isTrue="{!empty(v.caseRecord.Customer_Loyalty_Id__c)}">
-                <c:trac_LoyaltySearch loyalty="{!v.loyalty}" recordId="{!v.recordId}"/>
+                    <c:trac_LoyaltySearch loyalty="{!v.loyalty}" recordId="{!v.recordId}" refreshSearch="{!v.refreshSearch}"/>
                     <aura:set attribute="else">
-                        <c:trac_LoyaltySearch loyalty="{!v.loyalty}" recordId="{!v.recordId}" customerLoyaltyId="{!v.caseRecord.Customer_Loyalty_Id__c}"/>
+                        <c:trac_LoyaltySearch loyalty="{!v.loyalty}" recordId="{!v.recordId}" customerLoyaltyId="{!v.caseRecord.Customer_Loyalty_Id__c}" refreshSearch="{!v.refreshSearch}"/>
                     </aura:set>
                 </aura:if>
             </aura:if>
         </div>
-
         <div class="slds-is-relative">
             <aura:if isTrue="{!not(empty(v.loyalty))}">
-                <c:trac_Loyalty loyalty="{!v.loyalty}" isEditable="{!v.isEditable}"  caseRecordId="{!v.recordId}" />
+                <c:trac_Loyalty loyalty="{!v.loyalty}" isEditable="{!v.isEditable}"  caseRecord="{!v.caseRecord}" />
             </aura:if>
         </div>
     </div>
