US-0000173: Error Handling for Record API

--- a/aura/trac_BaseComponent/trac_BaseComponent.cmp
+++ b/aura/trac_BaseComponent/trac_BaseComponent.cmp
@@ -10,6 +10,9 @@
     <!-- Handlers -->
     <aura:handler name="init" value="{!this}" action="{!c.init}"/>
 
+    <!-- Events -->
+    <aura:registerEvent name="trac_MerkleErrorEvent" type="c:trac_MerkleErrorEvent" access="public"/>
+
     <!-- Markup -->
 
     <div>
